<resources>
    <string name="app_name">Malal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Address Location</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="account">Account</string>
    <string name="WelcomeText">Get it or Regret it</string>
    <string name="get_started">GET STARTED</string>
    <string name="backOnline">Back Online</string>
    <string name="connectionLost">Connection Lost!</string>
    <string name="webClientId">CLIENT ID</string>
    <string name="errorMessage">An error occurred, Please try again later</string>
    <string name="authPageMessage">Get your beauty \nwith Malal</string>
    <string name="orConnectWithGoogle">Or connect with Google</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="login">Login</string>
    <string name="hint_email">Email</string>
    <string name="email_error">Email Error</string>
    <string name="hint_password">Password</string>
    <string name="password_error">Password Error</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="btn_login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="sign_up">Sign up</string>
    <string name="progress_text">Please Wait</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an Account?</string>
    <string name="sign_in">Sign in</string>
    <string name="make_sale">MakeUp Sale</string>
    <string name="check">Check</string>
    <string name="view_all">View all</string>
    <string name="you_never_seen_before">You Never seen Before</string>
    <string name="brand_name">Brand Name</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="_10">-10%</string>
    <string name="_new">New</string>
    <string name="sale">Sale</string>
    <string name="product_details">Product Details</string>
    <string name="shipping_info">Shipping info</string>
    <string name="add_your_cart">Add Your Cart</string>
    <string name="ratings">Ratings</string>
    <string name="you_can_also_like_this">You can also Like this</string>
    <string name="recommended">Recommended</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="my_bag">My Bag</string>
    <string name="total_amount">Total amount:</string>
    <string name="check_out">CHECK OUT</string>
    <string name="empty_bag">Empty Bag</string>
    <string name="empty_favourite">EMPTY FAVOURITE</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_email">Profile Email</string>
    <string name="upload_image">Upload Image</string>
    <string name="my_orders">My Orders</string>
    <string name="you_have_no_orders">you have no orders</string>
    <string name="shipping_addresses">Shipping Addresses</string>
    <string name="no_address">No Address</string>
    <string name="you_have_no_cart">You Have no cart</string>
    <string name="settings">Settings</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="accountCreatedSuccessfully">Account created successfully</string>
    <string name="accountUpdatedSuccessfully">Account Updated Successfully</string>
    <string name="errorCreateAccount">An error occurred when trying to create account, please check your internet connection and try again.</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="productQuantity">%s, Price</string>
    <string name="productQuantityError">\"Please add valid quantity!\"</string>
    <string name="price">%.2f$</string>
    <string name="favorite">Favorite</string>
    <string name="add_all_to_cart">ADD ALL TO CART</string>
    <string name="savedToCart">Products have been added to the card successfully</string>
    <string name="noProductsCart">No Products in Cart!</string>
    <string name="ok">OK</string>
    <string name="payment">Payment</string>
    <string name="error">Error</string>
    <string name="paymentError">An error occurred with payment method.</string>
    <string name="addPaymentMethod">Please add a payment method to continue!</string>
    <string name="delivery">Delivery</string>
    <string name="total_cost">Total Price</string>
    <string name="place_order">Place Order</string>
    <string name="g_address">Address</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="current_address">Current Address:</string>
    <string name="help_text">Got a question? We\'re here to answer!</string>
    <string name="logout">Logout</string>
    <string name="orderProductsWithCost">%s products - %.2f$</string>
    <string name="no_orders">No Order</string>
    <string name="order_num">Order Num</string>
    <string name="order_date">Order Date</string>
    <string name="order_location">Order Location</string>
    <string name="order_products">Order Products</string>
    <string name="order_status">Order Status</string>
    <string name="add_your_name_here">Add Your Name Here</string>
    <string name="addUserName">Please add your name first!</string>
    <string name="addUserImage">Please add an image to your account!</string>
    <string name="logOutMessage">You have logged out successfully</string>
    <string name="all_categories">All Categories</string>
    <string name="brands">Brands</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="checkout">Checkout</string>
    <string name="category">Category</string>
</resources>