<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>
        <variable
            name="addressModel"
            type="com.example.malal.model.AddressModel" />
        <variable
            name="fragment"
            type="com.example.malal.presentation.fragment.main.AddressFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".presentation.fragment.main.AddressFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/currentAddressCv"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/backgroundAd"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currentAddressTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_address"
                android:visibility="visible"
                android:textSize="20sp"
                android:textColor="@color/mainText"
                android:fontFamily="@font/metropolis_regular" />

            <TextView
                android:id="@+id/currentAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Your Address"
                android:visibility="visible"
                android:textSize="16sp"
                android:textColor="@color/textAd"
                android:fontFamily="@font/metropolis_regular" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/metropolis_bold"
            android:text="@string/address"
            android:textColor="@color/mainText"
            android:textSize="30sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            android:onClick="@{()->fragment.cancel()}"
            app:layout_constraintTop_toTopOf="@id/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/address"
            android:layout_marginEnd="20dp"
            app:tint="@color/mainText"/>

        <LinearLayout
            android:id="@+id/llContainer"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/address">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/addressEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:drawableEnd="@null"
                android:paddingRight="20dp"
                android:textColor="@color/mainText"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/home"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="10dp"
                android:id="@+id/phoneEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:drawableEnd="@null"
                android:paddingRight="20dp"
                android:textColor="@color/mainText"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/phone"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="10dp"
                android:id="@+id/cityEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:textColor="@color/mainText"
                android:drawableEnd="@null"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/city"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="10dp"
                android:id="@+id/stateEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:textColor="@color/mainText"
                android:drawableEnd="@null"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/state"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddressSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:elevation="10dp"
                android:onClick="@{()->fragment.submitAddress()}" />


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:onClick="@{()->fragment.showAddressInputs()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>