<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="adapter"
            type="com.example.malal.presentation.adapter.FavoriteAdapter" />

        <variable
            name="fragment"
            type="com.example.malal.presentation.fragment.main.FavoriteFragment" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".presentation.fragment.main.FavoriteFragment">

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/MyFavoriteText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/metropolis_semibold"
            android:text="@string/favorite"
            android:textColor="@color/mainText"
            android:textSize="25sp"
            android:gravity="start|center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/cartRecView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:adapter="@{adapter}"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/favorite_item_rv_layout"
            app:layout_constraintBottom_toTopOf="@+id/bottomCartLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MyFavoriteText">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/bottomCartLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/checkOut_BagPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/btn_bg"
                android:onClick="@{()->fragment.addAllToCart()}"
                android:text="@string/add_all_to_cart" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:visibility="gone"
            android:id="@+id/emptyBagMsgLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.airbnb.lottie.LottieAnimationView
                android:scaleType="fitCenter"
                android:id="@+id/animationViewFavPage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_rawRes="@raw/empty" />

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_favourite"
                android:textColor="@color/textAd"
                android:fontFamily="@font/metropolis_semibold"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>